--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -1,6 +1,6 @@
-$website-width : 1280px;
+$website-width: 1280px;
 $main-color: #ffbc00;
-$light-color : #f4f4f4;
+$light-color: #f4f4f4;
 $medium-color: #ccc;
 $dark-color: #333;
-$bg-image : url("../img/showcase.jpg");
+$bg-image: url(../img/showcase.jpg);
