--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,15 +1,16 @@
 @import "config";
-
+@import "utilities";
 * {
-  font-family: "Dosis", "Montserrat", sans-serif;
+  font-family: "Lora", "freight-sans-pro", "Helvetica Neue", Helvetica, Arial,
+    sans-serif, "Dosis", "Montserrat", sans-serif;
   margin: 0;
-  background: #ffffff;
   line-height: 1.6;
+  letter-spacing: 1.2;
 }
 
 a {
   text-decoration: none;
-  color: $dark-color;
+  color: #000;
 }
 
 ul {
@@ -32,12 +33,80 @@ img {
   width: 70px;
   text-transform: uppercase;
   color: #fff;
+  padding: 0;
+}
+
+//main nav
+#main-nav {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 0.5rem;
+  ul {
+    display: flex;
+  }
+  li {
+    padding: 1rem 1.5rem;
+
+    a {
+      border-bottom: 3px transparent solid;
+      padding-bottom: 0.5rem;
+      transition: all 0.5s;
+      font-weight: 600;
+      &:hover {
+        border-color: $main-color;
+      }
+      &.current {
+        border-color: $main-color;
+      }
+    }
+  }
 }
 
 //header
-.App {
-  background: $bg-image;
-  //no-repeat center right / cover;
+#header-home {
+  background: $bg-image no-repeat center bottom / cover;
+  //   background-size: 100%;
   height: 100vh;
-  color: #fff;
+  //   color: #fff;
+}
+.header-content {
+  color: #000;
+  text-align: center;
+  padding-top: 7%;
+  h1 {
+    font-size: 2rem;
+    line-height: 2.4rem;
+    padding-bottom: 1.2rem;
+  }
+  p {
+    line-height: 1.7rem;
+    font-size: 1.2rem;
+  }
+  a {
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-height: 670px) {
+  .header-content {
+    padding-top: 4%;
+  }
+}
+
+@media (max-height: 620px) {
+  .header-content {
+    padding-top: 2%;
+  }
+}
+
+@media (max-width: 500px) {
+  * {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 370px) {
+  * {
+    font-size: 0.8rem;
+  }
 }
